--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,7 +1,6 @@
 - content_for :page_title, t('.title')
 - content_for :page_tagline, t('.subtitle')
-
-%table
+%table.table
   %thead
     %tr
       %th Leeder
