--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -17,8 +17,8 @@
     None, sorry.
 .links.well.clear
   - if can? :update, @location
-    = link_to 'Edit', edit_location_path(@location), class: 'btn'
-  = link_to 'Back', locations_path, class: 'btn'
+    = link_to 'Edit this location', edit_location_path(@location), class: 'btn'
+  = link_to 'Back, to all locations', locations_path, class: 'btn'
   
 %h2 Comments
 %p Sorry, there are no comments yet. Would you like to share your opinion?
