Add icons and improve language selection

--- a/app/assets/stylesheets/bootstrap-custom.css.scss
+++ b/app/assets/stylesheets/bootstrap-custom.css.scss
@@ -160,3 +160,8 @@ select, .uneditable-input {
 .datetime select {
   width: 75px;
 }
+
+i.icon-language {
+  background-image: url('/assets/icons/media/16/language.png');
+  background-size: 14px 14px;
+}
