--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -16,7 +16,7 @@
           = f.text_field :username, placeholder: "username"
           %span.add-on{ rel: 'tooltip', title: 'Required'}>
             %i.icon-asterisk
-        %span.help-block Your unique username.
+        %p.help-block Your unique username.
     .field.control-group
       = f.label :name, class: 'control-label'
       .controls
@@ -26,7 +26,7 @@
           = f.text_field :name, placeholder: "name"
           %span.add-on{ rel: 'tooltip', title: 'Required'}>
             %i.icon-asterisk
-        %span.help-block Your name.
+        %p.help-block Your name.
     .field.control-group
       = f.label :email, class: 'control-label'
       .controls
@@ -34,27 +34,39 @@
           %span.add-on>
             %i.icon-envelope
           = f.email_field :email, placeholder: "email"
-        %span.help-block Optionally provide an email address.
+        %p.help-block Optionally provide an email address.
     .field.control-group
       = f.label :gender, class: 'control-label'
       .controls
-        = f.collection_select :gender, @gender_options, :to_s, :humanize, :include_blank => 'Please select'
+        .input-prepend
+          %span.add-on>
+            %i.icon-adjust
+          = f.collection_select :gender, @gender_options, :to_s, :humanize, :include_blank => 'Please select'
         %span.help-block Optionally specify your gender.
     .field.control-group
       = f.label :dob, t('model.user.dob.display'), class: 'control-label'
       .controls.date
-        = f.date_select :dob, prompt: true
-        %span.help-block Optionally provide your birth date.
+        .input-prepend
+          %span.add-on>
+            %i.icon-calendar
+          = f.date_select :dob, prompt: true
+        %p.help-block Optionally provide your birth date.
     .field.control-group
-      = f.label :locale, class: 'control-label'
+      = f.label :locale, "Language", class: 'control-label'
       .controls
-        = f.select :locale, options_for_select(@locales), prompt: true
-        %span.help-block Optionally provide your language.  You can also change the language by using the top menu dropdown.
+        .input-prepend
+          %span.add-on>
+            %i.icon-comment
+          = f.select :locale, options_for_select(t('locales'), selected: @user.locale), prompt: true
+        %p.help-block Optionally provide your language.  You can also change the language by using the top menu dropdown.
     .field.control-group
       = f.label :time_zone, class: 'control-label'
       .controls
-        = f.time_zone_select :time_zone, @time_zones, prompt: true
-        %span.help-block Optionally provide your local time zone. Otherwise all times will be displayed as UTC.
+        .input-prepend
+          %span.add-on>
+            %i.icon-time
+          = f.time_zone_select :time_zone, @time_zones, prompt: true
+        %p.help-block Optionally provide your local time zone. Otherwise all times will be displayed as UTC.
     .actions.well
       = f.submit 'Save profile', class: 'btn btn-success btn-large'
       - if @user.new_record?
