Improving media pages, added icons.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,7 +1,9 @@
 @import "fonts";
 @import "bootstrap";
 @import "bootstrap-custom";
+@import "comments";
 @import "events";
+@import "media";
 @import "posts";
 
 img.avatar {
