--- a/app/views/layouts/_alerts.html.haml
+++ b/app/views/layouts/_alerts.html.haml
@@ -1,8 +1,8 @@
 - if flash[:success]
-  .alert-message.success= flash[:success]
+  .alert.alert-success= flash[:success]
 - if flash[:error]
-  .alert-message.error= flash[:error]
+  .alert.alert-error= flash[:error]
 - if flash[:warning]
-  .alert-message.warning= flash[:warning]
+  .alert.alert-warning= flash[:warning]
 - if flash[:notice]
-  .alert-message.info= flash[:notice]
+  .alert.alert-info= flash[:notice]
